Fix review: add Allure, update tests and test data